--- a/app/src/main/res/values/strings_activity_login.xml
+++ b/app/src/main/res/values/strings_activity_login.xml
@@ -1,5 +1,5 @@
 <resources>
     <!-- Strings related to login -->
-    <string name="action_sign_in_short">Sign in with VK</string>
+    <string name="action_sign_in_short">Log in</string>
     <string name="send_request_title">Choose friend</string>
 </resources>
