--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,6 +75,14 @@
         <item name="android:paddingRight">16dp</item>
     </style>
 
+    <style name="ButtonSplash" parent="Widget.AppCompat.Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/m_grid_5x</item>
+        <item name="android:layout_marginRight">@dimen/m_grid_5x</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="Container">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
