added dialog icons

--- a/app/src/main/res/drawable-mdpi/image_placeholder.xml
+++ b/app/src/main/res/drawable-mdpi/image_placeholder.xml
@@ -1,4 +1,4 @@
-<!-- drawable/image.xml -->
+<!-- drawable/image_box.xml.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="@dimen/m_image_preview_splash_size"
     android:width="@dimen/m_image_preview_splash_size"
