--- a/app/src/main/res/drawable/pdf_placeholder.xml
+++ b/app/src/main/res/drawable/pdf_placeholder.xml
@@ -1,4 +1,4 @@
-<!-- drawable/file_pdf_box.xml -->
+<!-- drawable/file_pdf.xml-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="@dimen/m_image_preview_splash_size"
     android:width="@dimen/m_image_preview_splash_size"
