--- a/app/src/main/res/layout-land/fragment_unknown_type_document.xml
+++ b/app/src/main/res/layout-land/fragment_unknown_type_document.xml
@@ -8,11 +8,8 @@
     android:background="@color/md_black_1000">
 
     <RelativeLayout
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true">
 
         <RelativeLayout
@@ -38,6 +35,14 @@
                 app:cpb_background_progressbar_width="@dimen/circular_progress_thickness"
                 app:cpb_progressbar_color="@color/md_grey_100"
                 app:cpb_progressbar_width="@dimen/circular_progress_thickness" />
+
+            <ImageView
+                android:id="@+id/notify_open"
+                android:layout_alignBottom="@id/file_type_icon"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
         </RelativeLayout>
 
         <TextView
@@ -48,8 +53,9 @@
             android:layout_centerHorizontal="true"
             android:text="Archive.zip"
             android:textSize="25sp"
-            android:maxLines="2"
-            android:lines="2"
+            android:maxLines="1"
+            android:lines="1"
+            android:singleLine="true"
             android:gravity="center_horizontal"
             android:ellipsize="middle"
             android:layout_marginLeft="@dimen/m_grid_2x"
