--- a/app/src/main/res/drawable/splashscreen.xml
+++ b/app/src/main/res/drawable/splashscreen.xml
@@ -4,10 +4,10 @@
     <item
         android:drawable="@color/colorPrimary"/>
 
-    <!--<item>
+    <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/ic_ab_app"/>
-    </item>-->
+            android:src="@mipmap/vk_logo" />
+    </item>
 
 </layer-list>
