audio player fixed

--- a/app/src/main/res/layout-land/fragment_audio_player.xml
+++ b/app/src/main/res/layout-land/fragment_audio_player.xml
@@ -11,6 +11,8 @@
     <RelativeLayout
         android:layout_weight="1"
         android:id="@+id/audio_views"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:gravity="center">
