--- a/app/src/main/res/layout/fragment_audio_player.xml
+++ b/app/src/main/res/layout/fragment_audio_player.xml
@@ -8,6 +8,8 @@
     android:background="@color/md_black_1000">
 
     <RelativeLayout
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:id="@+id/audio_views"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
